--- a/Index.html
+++ b/Index.html
@@ -4,63 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Misha Kumari Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Brad</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
 
-    <section id="home">
-        <h1>Welcome to Misha's Portfolio</h1>
-        <p>I'm a software engineer with a passion for coding and problem-solving.</p>
-    </section>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I'm Misha Kumari, currently pursuing a Master's degree in Software Engineering at Arizona State University. With a background in Java, microservices, and web development, I have hands-on experience in building and deploying full-stack applications.</p>
-    </section>
-
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Java, Spring Boot</li>
-            <li>C++, JavaScript</li>
-            <li>React, HTML, CSS</li>
-            <li>MySQL, REST APIs</li>
-        </ul>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Inventory Management System</h3>
-            <p>A web application that helps businesses manage and track inventory in real-time.</p>
+            </div>
         </div>
-        <div class="project">
-            <h3>Personal Blog</h3>
-            <p>A full-stack blog website built using ReactJS, Node.js, and MongoDB.</p>
+    </nav>
+    <!-- main banner -->
+    <section class="bgimage" id="home">
+        <div class="container-fluid">
+            <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                <h2 class="hero_title">Hi, it's me Brad</h2>
+                <p class="hero_desc">I am a professional freelancer in New York City</p>
+            </div>
+            </div>
         </div>
     </section>
-
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Email: mishakumari@email.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/misha-kumari">linkedin.com/in/misha-kumari</a></p>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Misha Kumari. All rights reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
