--- a/Index.html
+++ b/Index.html
@@ -43,8 +43,8 @@
         <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                <h2 class="hero_title">Hi, it's me Brad</h2>
-                <p class="hero_desc">I am a professional freelancer in New York City</p>
+                <h2 class="hero_title">Hi, it's me Misha Kumari</h2>
+                <p class="hero_desc">Master's in Software Engineer @Arizona State University</p>
             </div>
             </div>
         </div>
@@ -54,37 +54,10 @@
         <div class="container mt-4 pt-4">
             <h1 class="text-center">About Me</h1>
             <div class="row mt-4">
-                <div class="col-lg-4">
-                    <img src="images/about.jpg" class= "imageAboutPage" alt="">
-                </div>
 
                 <div class="col-lg-8">
-                    <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
-
-                    </p>
-                    <div class="row mt-3">
-                        <div class="col-md-6">
-                            <ul>
-                                <li>Name: David Parker</li>
-                                <li>Age: 28</li>
-                                <li>Occupation: Web Developer</li>
-
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                            <ul>
-                                <li>Name: David Parker</li>
-                                <li>Age: 28</li>
-                                <li>Occupation: Web Developer</li>
-
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row mt-3">
-                        <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    <p> I'm Misha Kumari, a software engineer with a passion for crafting innovative and efficient solutions. With a strong foundation in c++ and Java, I've gained hands-on experience in building scalable microservices, implementing robust messaging systems, and ensuring application security. I'm excited to leverage my technical expertise and problem-solving skills to contribute to cutting-edge projects and deliver exceptional results.
                         </p>
-                    </div>
                 </div>
             </div>
     </section>
