Adding content for portfolio and adjusting its size

--- a/Index.html
+++ b/Index.html
@@ -137,10 +137,10 @@
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/WHSSGR.png" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                        <img class="card-img-top portfolio-card-image" src="images/WHSSGR.png" alt="Card image" style="width:100%">
+                        <div class="card-body portfolio-card-text">
                             <h4 class="card-title">Whssgr.com</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="card-text">Streamline school operations with our comprehensive management system. Features include student information management, attendance tracking, fee management, and more.</p>
                             <div class="text-center">
                                 <a href="#" class="btn btn-success">Link</a>
                             </div>
@@ -150,10 +150,10 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/WHStrustpkl.png" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                        <img class="card-img-top portfolio-card-image" src="images/WHStrustpkl.png" alt="Card image" style="width:100%">
+                        <div class="card-body portfolio-card-text">
                             <h4 class="card-title">Whstrustpkl.com</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="card-text">Streamline school operations with our comprehensive management system. Features include student information management, attendance tracking, fee management, and more.</p>
                             <div class="text-center">
                                 <a href="#" class="btn btn-success">Link</a>
                             </div>
@@ -163,10 +163,10 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/Ambrosia.png" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                        <img class="card-img-top portfolio-card-image" src="images/Ambrosia.png" alt="Card image" style="width:100%">
+                        <div class="card-body portfolio-card-text">
                             <h4 class="card-title">ambrosiabakery.in</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="card-text">Indulge in a world of delicious treats. Order cakes, pastries, and other baked goods online for delivery or pickup.</p>
                             <div class="text-center">
                                 <a href="https://www.ambrosiabakery.in/" class="btn btn-success">Link</a>
                             </div>
@@ -178,10 +178,10 @@
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/chatbot.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                        <img class="card-img-top portfolio-card-image" src="images/chatbot.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body portfolio-card-text">
                             <h4 class="card-title">Assistant Chatbot</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="card-text">Enhance customer service with our AI-powered chatbot. It can answer FAQs, provide product information, and assist with order processing.</p>
                             <div class="text-center">
                                 <a href="#" class="btn btn-success">Link</a>
                             </div>
@@ -191,10 +191,10 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/smartcityparkingsystem.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                        <img class="card-img-top portfolio-card-image" src="images/smartcityparkingsystem.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body portfolio-card-text">
                             <h4 class="card-title">Smart City Parking System</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="card-text">Optimize parking management in your city with our smart parking system. Find available parking spaces, pay for parking, and receive real-time updates.</p>
                             <div class="text-center">
                                 <a href="#" class="btn btn-success">Link</a>
                             </div>
@@ -204,10 +204,10 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/cateringservice.jpg" alt="Card image" style="width:100%">
-                        <div class="card-body">
+                        <img class="card-img-top portfolio-card-image" src="images/cateringservice.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body portfolio-card-text">
                             <h4 class="card-title">Catering service application</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="card-text">Simplify your event planning with our catering service app. Browse menus, place orders, and manage your catering needs from anywhere.</p>
                             <div class="text-center">
                                 <a href="#" class="btn btn-success">Link</a>
                             </div>
