--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Brad</a>
+            <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -61,6 +61,28 @@
                 </div>
             </div>
     </section>
+   <!--Work Experience-->
+   <section id="experience">
+    <div class="container">
+      <h2 class="text-center">Experience</h2>
+      <div class="row">
+        <div class="col-lg-6 col-md-12">
+          <div class="experience-card">
+            <div class="company-logo">
+              <img src="images/Dell_Logo.svg.png" alt="Dell Logo" width="100px">
+            </div>
+            <h3>Software Engineer</h3>
+            <h4>Dell Technologies</h4>
+            <ul>
+              <li>Constructed a console application using ASP.NET capable of processing data from SQL database into CSV files and uploading to Network Attached Storage (NAS path).</li>
+              <li>Increased code coverage and performance by developing unit tests, resulting in a 70% score improvement on DevOps Assessment dashboard.</li>
+              <li>Integrated password management tool into the CI/CD pipeline to automate password retrieval and usage from vault, streamlining annual password reset process.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
     <!-- services section-->
     <section id="services">
         <div class="container">
