Adding more details

--- a/Index.html
+++ b/Index.html
@@ -71,12 +71,57 @@
             <div class="company-logo">
               <img src="images/Dell_Logo.svg.png" alt="Dell Logo" width="100px">
             </div>
-            <h3>Software Engineer</h3>
+            <h3>Software Engineer II</h3>
             <h4>Dell Technologies</h4>
             <ul>
-              <li>Constructed a console application using ASP.NET capable of processing data from SQL database into CSV files and uploading to Network Attached Storage (NAS path).</li>
+              <li>Developed Java-based Microservices using Spring integration and deployed on PCF(Pivotal Cloud Foundry) for high availability and easy management.</li>
+              <li>Implemented messaging techniques using RabbitMQ and IBM MQ to facilitate cross-application communication, handling over 1,000 transactions per minute.</li>
+              <li>Ensured security and compliance of 60 applications through regular assessments and vulnerability upgrades resulting in a 30% score improvement on DevOps Assessment Dashboard.</li>
+            </ul>
+          </div>
+        </div>
+  
+        <div class="col-lg-6 col-md-12">
+          <div class="experience-card">
+            <div class="company-logo">
+              <img src="images/Dell_Logo.svg.png" alt="Dell Logo" width="100px">
+            </div>
+            <h3>Software Engineer I</h3>
+            <h4>Dell Technologies (September 2021 - March 2023)</h4> <ul>
+              <li>Constructed a console application using ASP.NET capable of processing data from SQL database into CSV files and uploading to Network Attached Storage(NAS path).</li>
               <li>Increased code coverage and performance by developing unit tests, resulting in a 70% score improvement on DevOps Assessment dashboard.</li>
               <li>Integrated password management tool into the CI/CD pipeline to automate password retrieval and usage from vault, streamlining annual password reset process.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+  
+      <div class="row">
+        <div class="col-lg-6 col-md-12">
+          <div class="experience-card">
+            <div class="company-logo">
+              <img src="images/woodlands_logo.png" alt="Woodlands House School Logo" width="100px"> </div>
+            <h3>Program Analyst Trainee </h3>
+            <h4>Cognizant</h4>
+            <ul>
+              <li>Developed full-stack Java applications, including banking systems, leveraging technologies like Spring Boot, React, and SQL.</li>
+              <li>Implemented robust data pipelines and machine learning models to improve operational efficiency and decision-making.</li>
+              <li>Collaborated with cross-functional teams to deliver high-quality software solutions, adhering to Agile methodologies</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6 col-md-12">
+          <div class="experience-card">
+            <div class="company-logo">
+              <img src="images/woodlands_logo.png" alt="Woodlands House School Logo" width="100px"> </div>
+            <h3>Program Analyst Trainee </h3>
+            <h4>Cognizant</h4>
+            <ul>
+              <li>Developed full-stack Java applications, including banking systems, leveraging technologies like Spring Boot, React, and SQL.</li>
+              <li>Implemented robust data pipelines and machine learning models to improve operational efficiency and decision-making.</li>
+              <li>Collaborated with cross-functional teams to deliver high-quality software solutions, adhering to Agile methodologies</li>
             </ul>
           </div>
         </div>
