updating experience section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
     </section>
-<!--    <!--Work Experience-->
+<!-- Work Experience
    <section id="experience">
     <div class="container">
       <h2 class="text-center">Experience</h2>
