Adding website links to the button

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             <h4 class="card-title">Whssgr.com</h4>
                             <p class="card-text">Streamline school operations with our comprehensive management system. Features include student information management, attendance tracking, fee management, and more.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://whssgr.com/" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                             <h4 class="card-title">Whstrustpkl.com</h4>
                             <p class="card-text">Streamline school operations with our comprehensive management system. Features include student information management, attendance tracking, fee management, and more.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://www.whstrustpkl.com/" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
