Adding correct location

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-success">
         <div class="container">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,15 +37,58 @@
 
             </div>
         </div>
+    </nav> -->
+    <nav class="custom-navbar">
+        <div class="container">
+            <a href="#" class="logo">
+                <!-- <img src="your_logo.png" alt="Your Logo" style="height: 50px;">  -->
+            </a>
+            <ul class="nav-list">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
     </nav>
     <!-- main banner -->
     <section class="bgimage" id="home">
         <div class="container-fluid">
             <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                <h2 class="hero_title">Hi, it's me Misha Kumari</h2>
-                <p class="hero_desc">Master's in Software Engineer @Arizona State University</p>
-            </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text text-center"> 
+                    <div class="d-flex align-items-center">
+
+                        <img class="hero_image" src="images/Hero_Image.jpeg" alt="Misha Kumari" style="width: 500px; height: 500px; margin-right: 50px;"> 
+                    <div>
+                        <h2 class="hero_title">Hi, it's me Misha Kumari</h2>
+                        <p class="hero_desc1">Master's in Software Engineer @Arizona State University</p>
+                        <p class="hero_desc2">Ex Software Engineer-2 @Dell Technologies</p>
+                        
+                        <!-- <div class="social-icons">
+                        <i class="fab fa-google fa-2x" style="color: #dd4b39;"></i>
+                        <i class="fab fa-instagram fa-2x" style="color: #ac2bac;"></i>
+                        <i class="fab fa-linkedin-in fa-2x" style="color: #0082ca;"></i>
+                        <i class="fab fa-github fa-2x" style="color: #ffffff;"></i>
+                        </div> -->
+                        <div class="social-icons">
+                            <a href="mailto:mishakumari559@gmail.com" target="_blank">
+                                <i class="fab fa-google fa-2x" style="color: #dd4b39;"></i>
+                            </a>
+                            <a href="https://www.instagram.com/misha_singh26/" target="_blank">
+                                <i class="fab fa-instagram fa-2x" style="color: #ac2bac;"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/misha-kumari/" target="_blank"> 
+                                <i class="fab fa-linkedin-in fa-2x" style="color: #0082ca;"></i>
+                            </a>
+                            <a href="https://github.com/misha141" target="_blank">
+                                <i class="fab fa-github fa-2x" style="color: #ffffff;"></i>
+                            </a>
+                        </div>
+                    </div>
+                    </div>
+                   
+                </div>
             </div>
         </div>
     </section>
@@ -61,73 +104,6 @@
                 </div>
             </div>
     </section>
-<!-- Work Experience
-   <section id="experience">
-    <div class="container">
-      <h2 class="text-center">Experience</h2>
-      <div class="row">
-        <div class="col-lg-6 col-md-12">
-          <div class="experience-card">
-            <div class="company-logo">
-              <img src="images/Dell_Logo.svg.png" alt="Dell Logo" width="100px">
-            </div>
-            <h3>Software Engineer II</h3>
-            <h4>Dell Technologies</h4>
-            <ul>
-              <li>Developed Java-based Microservices using Spring integration and deployed on PCF(Pivotal Cloud Foundry) for high availability and easy management.</li>
-              <li>Implemented messaging techniques using RabbitMQ and IBM MQ to facilitate cross-application communication, handling over 1,000 transactions per minute.</li>
-              <li>Ensured security and compliance of 60 applications through regular assessments and vulnerability upgrades resulting in a 30% score improvement on DevOps Assessment Dashboard.</li>
-            </ul>
-          </div>
-        </div>
-  
-        <div class="col-lg-6 col-md-12">
-          <div class="experience-card">
-            <div class="company-logo">
-              <img src="images/Dell_Logo.svg.png" alt="Dell Logo" width="100px">
-            </div>
-            <h3>Software Engineer I</h3>
-            <h4>Dell Technologies (September 2021 - March 2023)</h4> <ul>
-              <li>Constructed a console application using ASP.NET capable of processing data from SQL database into CSV files and uploading to Network Attached Storage(NAS path).</li>
-              <li>Increased code coverage and performance by developing unit tests, resulting in a 70% score improvement on DevOps Assessment dashboard.</li>
-              <li>Integrated password management tool into the CI/CD pipeline to automate password retrieval and usage from vault, streamlining annual password reset process.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-  
-      <div class="row">
-        <div class="col-lg-6 col-md-12">
-          <div class="experience-card">
-            <div class="company-logo">
-              <img src="images/woodlands_logo.png" alt="Woodlands House School Logo" width="100px"> </div>
-            <h3>Program Analyst Trainee </h3>
-            <h4>Cognizant</h4>
-            <ul>
-              <li>Developed full-stack Java applications, including banking systems, leveraging technologies like Spring Boot, React, and SQL.</li>
-              <li>Implemented robust data pipelines and machine learning models to improve operational efficiency and decision-making.</li>
-              <li>Collaborated with cross-functional teams to deliver high-quality software solutions, adhering to Agile methodologies</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6 col-md-12">
-          <div class="experience-card">
-            <div class="company-logo">
-              <img src="images/woodlands_logo.png" alt="Woodlands House School Logo" width="100px"> </div>
-            <h3>Program Analyst Trainee </h3>
-            <h4>Cognizant</h4>
-            <ul>
-              <li>Developed full-stack Java applications, including banking systems, leveraging technologies like Spring Boot, React, and SQL.</li>
-              <li>Implemented robust data pipelines and machine learning models to improve operational efficiency and decision-making.</li>
-              <li>Collaborated with cross-functional teams to deliver high-quality software solutions, adhering to Agile methodologies</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
     <!-- services section-->
     <section id="services">
         <div class="container">
@@ -291,46 +267,34 @@
             <div class="row mt-4">
                 <div class="col-lg-6">
                     <!-- to edit google map goto https://www.embed-map.com type your location, generate html code and copy the html  -->
-                    <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;">
-                        <div id="embedmap-canvas" style="height:100%; width:100%;max-width:100%;">
-                            <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=new+york&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
-                            </iframe>
+                    <div class = 'map-google' style="text-decoration:none; overflow:hidden;max-width:100%;width:600px;height:500px;">
+                        <div id="my-map-display" style="height:100%; width:100%;max-width:100%;">
+                            <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Tempe,+Arizona,85281&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+                            </div><a class="our-googlemap-code" href="https://kbj9qpmy.com/bp" id="grab-map-authorization"></a>
+                            <style>#my-map-display .text-marker{}.map-generator{max-width: 100%; max-height: 100%; background: none;}</style> 
+                            </div>
                         </div>
-                        <a class="googlemaps-html" href="https://www.embed-map.com" id="get-data-forembedmap">https://www.embed-map.com</a>
-                        <style>#embedmap-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}
-                        </style>
+
+                        <div class="col-lg-6">
+                            <!-- form fields -->
+                            <form>
+                                <input type="text" class="form-control form-control-lg" placeholder="Name">
+                                <input type="email" class="form-control mt-3" placeholder="Email">
+                                <input type="text" class="form-control mt-3" placeholder="Subject">
+                                <div class="mb-3 mt-3">
+                                    <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
+                                </div>
+                            </form>
+                            <button type="button" class="btn btn-success mt-3">Contact Me</button>
+
+                        </div>
                     </div>
                 </div>
-
-                <div class="col-lg-6">
-                    <!-- form fields -->
-                    <form>
-                        <input type="text" class="form-control form-control-lg" placeholder="Name">
-                        <input type="email" class="form-control mt-3" placeholder="Email">
-                        <input type="text" class="form-control mt-3" placeholder="Subject">
-                        <div class="mb-3 mt-3">
-                            <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
-                        </div>
-                    </form>
-                    <button type="button" class="btn btn-success mt-3">Contact Me</button>
-
-                </div>
-
+            </section>
+    <footer id="footer">
+            <div class="container-fluid">
+                <p class="text-center text-light">&copy; 2025 Misha Kumari. All Rights Reserved.</p> 
             </div>
-        </div>
-    </section>
-     <!-- footer section-->
-     <footer id="footer">
-        <div class="container-fluid">
-            <!-- social media icons -->
-            <div class="social-icons mt-4">
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
-            </div>
-        </div>
     </footer>
 
 </body>
