--- a/index.html
+++ b/index.html
@@ -10,38 +10,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-success">
-        <div class="container">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-
-            </div>
-        </div>
-    </nav> -->
     <nav class="custom-navbar">
         <div class="container">
             <a href="#" class="logo">
-                <!-- <img src="your_logo.png" alt="Your Logo" style="height: 50px;">  -->
             </a>
             <ul class="nav-list">
                 <li><a href="#home">Home</a></li>
@@ -64,13 +35,6 @@
                         <h2 class="hero_title">Hi, it's me Misha Kumari</h2>
                         <p class="hero_desc1">Master's in Software Engineer @Arizona State University</p>
                         <p class="hero_desc2">Ex Software Engineer-2 @Dell Technologies</p>
-                        
-                        <!-- <div class="social-icons">
-                        <i class="fab fa-google fa-2x" style="color: #dd4b39;"></i>
-                        <i class="fab fa-instagram fa-2x" style="color: #ac2bac;"></i>
-                        <i class="fab fa-linkedin-in fa-2x" style="color: #0082ca;"></i>
-                        <i class="fab fa-github fa-2x" style="color: #ffffff;"></i>
-                        </div> -->
                         <div class="social-icons">
                             <a href="mailto:mishakumari559@gmail.com" target="_blank">
                                 <i class="fab fa-google fa-2x" style="color: #dd4b39;"></i>
@@ -291,7 +255,7 @@
                     </div>
                 </div>
             </section>
-    <footer id="footer">
+    <footer id="footer_bottom">
             <div class="container-fluid">
                 <p class="text-center text-light">&copy; 2025 Misha Kumari. All Rights Reserved.</p> 
             </div>
